fixed overlap again

--- a/css/main.css
+++ b/css/main.css
@@ -354,6 +354,7 @@ body {
   /* HEADER */
   .header__inner {
     margin-bottom: 6rem;
+    min-height: 80vh;
   }
 
   .logo_img {
